# py-atmchile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  diff_summary.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  publish.yml  refresh-stations.yml
docs/: output-columns.md  sinca-internals.md
examples/: atmchile_usage_guide.ipynb  example_usage.py
src/atmchile/: __init__.py  air_quality_data.py  climate_data.py  scripts.py  utils.py
src/atmchile/data/: dmc_stations.csv  sinca_stations.csv  sinca_stations_old.csv
tests/: conftest.py  test_air_quality.py  test_air_quality_async.py  test_climate_data.py  test_integration.py  test_scripts.py  test_utils.py
