[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atmchile"
version = "0.1.0"
description = "Python library to obtain climate and air quality data from monitoring stations in Chile"
keywords = ["Chile", "climate", "air-quality", "SINCA", "pandas", "meteorology"]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "Marcelo González", email = "maigonzalezh@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.28.0",
    "httpx>=0.23.0",
    "urllib3>=2.6.3",
]

[project.urls]
Homepage = "https://github.com/maigonzalezh/py-atmchile"
Repository = "https://github.com/maigonzalezh/py-atmchile"
"Bug Tracker" = "https://github.com/maigonzalezh/py-atmchile/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/atmchile"]

[tool.hatch.build.targets.wheel.package-data]
"atmchile" = ["data/*.csv", "py.typed"]

[project.scripts]
test-cov = "atmchile.scripts:test_cov"
refresh-stations = "atmchile.scripts:refresh_stations"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not integration",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests that hit live external endpoints (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/atmchile"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.2.2.240807",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.0",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
